[gd_scene load_steps=5 format=3 uid="uid://c65ywo6ftkvtc"]

[ext_resource type="Script" uid="uid://qn1dv8lmxiwf" path="res://Scripts/player_xp.gd" id="1_88clc"]
[ext_resource type="Texture2D" uid="uid://daant2bhkhvik" path="res://Textures/Barre-PV-XP2.png" id="2_xfgpv"]
[ext_resource type="Texture2D" uid="uid://bne6rspaheb1h" path="res://Textures/BARRE-XP.png" id="3_ikuha"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xfgpv"]
bg_color = Color(0.909804, 0.811765, 0.65098, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="XPPanel" type="Node2D"]
script = ExtResource("1_88clc")

[node name="Panel" type="Panel" parent="."]
offset_top = 16.0
offset_right = 256.0
offset_bottom = 112.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xfgpv")

[node name="LevelLabel" type="Label" parent="Panel"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 2
offset_right = 128.0
offset_bottom = 17.0
scale = Vector2(2, 2)
text = "Niv : "
horizontal_alignment = 1

[node name="XPProgressBar" type="TextureProgressBar" parent="Panel"]
texture_filter = 1
layout_mode = 2
offset_left = 64.0
offset_top = 39.0
offset_right = 192.0
offset_bottom = 51.0
step = 5.0
texture_under = ExtResource("2_xfgpv")
texture_progress = ExtResource("3_ikuha")

[node name="XPDetailsLabel" type="Label" parent="Panel"]
visible = false
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 2
offset_left = 32.0
offset_top = 60.0
offset_right = 224.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
